--- a/app/templates/thankyou.html
+++ b/app/templates/thankyou.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Thank You - Mohit Kumar{% endblock %}
+{% block title %}Thank You - Kartik Bansal{% endblock %}
 
 {% block content %}
 <section class="py-20 text-center" data-aos="fade-up">
